added the add patient UI

--- a/src/main/resources/templates/all.html
+++ b/src/main/resources/templates/all.html
@@ -27,5 +27,8 @@
     </tr>
     </tbody>
 </table>
+
+<button onclick="window.location.href='/patients/add'">Add Patient</button>
+
 </body>
 </html>
